--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,12 @@
 html {
     scroll-behavior: smooth;
 }
-body{
-    background: white;
+
+@theme {
+    --font-sans: "Inter", sans-serif;
+}
+
+body {
+    font-family: var(--font-sans);
+    
 }
